[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Menus/mainMenu.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
quickstart = {
"difficulty": "easy",
"is_quickstart": true,
"random_seed": true,
"seed": 0,
"world_name": "QUICKSTART WORLD"
}

[node name="label_title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.1
text = "Main Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_load" type="Button" parent="."]
margin_left = 122.556
margin_top = 268.0
margin_right = 422.556
margin_bottom = 318.0
text = "Load game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_new" type="Button" parent="."]
margin_left = 122.556
margin_top = 118.0
margin_right = 422.556
margin_bottom = 168.0
text = "New game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_options" type="Button" parent="."]
margin_left = 122.556
margin_top = 418.0
margin_right = 422.556
margin_bottom = 468.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_exit" type="Button" parent="."]
margin_left = 122.556
margin_top = 568.0
margin_right = 422.556
margin_bottom = 618.0
text = "Exit"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
